--- a/lib/dwh/settings/postgres.yml
+++ b/lib/dwh/settings/postgres.yml
@@ -2,10 +2,15 @@
 date_add: "(@exp + '@val @unit'::interval)"
 date_diff: "age(@start_exp, @end_exp)"
 date_format_sql: "TO_CHAR(@exp, '@format')"
+date_literal: "'@val'::DATE"
+date_time_literal: "'@val'::TIMESTAMP"
 day_name_format: "Day"
 abbreviated_day_name_format: "Dy"
 month_name_format: "Month"
 abbreviated_month_name_format: "Mon"
+# Adjust week start day
+sunday_week_start_day: "( DATE_TRUNC('WEEK', @exp + INTERVAL '1 DAY') - INTERVAL '1 DAY' )"
+monday_week_start_day: "( DATE_TRUNC('WEEK', @exp - INTERVAL '1 DAY') + INTERVAL '1 DAY' )"
 
 extract_year: 'extract(year from @exp)'
 extract_month: 'extract(month from @exp)'
@@ -16,7 +21,9 @@ extract_day_of_week: 'extract(DOW from @exp)'
 extract_week_of_year: 'extract(WEEK from @exp)'
 extract_hour: 'extract(HOUR from @exp)'
 extract_minute: 'extract(MINUTE from @exp)'
-extract_year_month: 'cast((extract(year from @exp)::varchar || extract(month from @exp)::varchar) as integer)'
+extract_year_month: "cast((extract(year from @exp)::varchar || TO_CHAR(@exp, 'MM')) as integer)"
+
+cast: "@exp::@type"
 
 # array operations
 array_in_list: "@exp && ARRAY[@list]" # list is comma separated
