Added functions tests for major items in the RDBMS dbs. Test rig is horeshit

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,3 +25,9 @@ Lint/UnusedMethodArgument:
 
 Metrics/PerceivedComplexity:
   Enabled: false
+
+Style/SymbolProc:
+  Enabled: false
+
+Metrics/BlockLength:
+  Enabled: false
