--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,15 @@ on:
   pull_request:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     name: Ruby ${{ matrix.ruby }}
     strategy:
       matrix:
         ruby:
           - '3.4.4'
+    env:
+      BUNDLE_WITHOUT: 'development'
 
     steps:
       - uses: actions/checkout@v4
@@ -24,11 +26,6 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
-          cache-version: 1
-          bundler: 'latest'
-
-      - name: Install test dependencies
-        run: bundle install --without development
 
       - name: Run the default task
         run: bundle exec rake test:unit
