initial auth implementation

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,9 @@ Style/FrozenStringLiteralComment:
 
 Metrics/ClassLength:
   Enabled: false
+  
+Metrics/ModuleLength:
+  Enabled: false
 
 Metrics/CyclomaticComplexity:
   Enabled: false
