--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Ruby
+name: Test and Document 
 
 on:
   push:
@@ -30,8 +30,31 @@ jobs:
       - name: Run RuboCop
         run: bundle exec rubocop
 
-      - name: Generate documentation
-        run: bundle exec rake doc
-
       - name: Run the default task
         run: bundle exec rake test:unit
+
+  docs:
+    runs-on: ubuntu-latest
+    needs: test # This job runs only after 'test' completes successfully
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+
+    env:
+      BUNDLE_WITHOUT: 'development'
+
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3.4.4'
+        bundler-cache: true
+    
+    - name: Generate documentation
+      run: bundle exec rake doc
+    
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./docs
