--- a/lib/dwh/settings/postgres.yml
+++ b/lib/dwh/settings/postgres.yml
@@ -1,6 +1,6 @@
 
 date_add: "(@exp + '@val @unit'::interval)"
-date_diff: "age(@start_exp, @end_exp)"
+date_diff: "AGE(@start_exp, @end_exp)"
 date_format_sql: "TO_CHAR(@exp, '@format')"
 date_literal: "'@val'::DATE"
 date_time_literal: "'@val'::TIMESTAMP"
@@ -12,16 +12,16 @@ abbreviated_month_name_format: "Mon"
 sunday_week_start_day: "( DATE_TRUNC('WEEK', @exp + INTERVAL '1 DAY') - INTERVAL '1 DAY' )"
 monday_week_start_day: "( DATE_TRUNC('WEEK', @exp - INTERVAL '1 DAY') + INTERVAL '1 DAY' )"
 
-extract_year: 'extract(year from @exp)'
-extract_month: 'extract(month from @exp)'
-extract_quarter: 'extract(quarter from @exp)'
-extract_day_of_year: 'extract(DOY from @exp)'
-extract_day_of_month: 'extract(DAY from @exp)'
-extract_day_of_week: 'extract(DOW from @exp)'
-extract_week_of_year: 'extract(WEEK from @exp)'
-extract_hour: 'extract(HOUR from @exp)'
-extract_minute: 'extract(MINUTE from @exp)'
-extract_year_month: "cast((extract(year from @exp)::varchar || TO_CHAR(@exp, 'MM')) as integer)"
+extract_year: 'EXTRACT(year from @exp)'
+extract_month: 'EXTRACT(month from @exp)'
+extract_quarter: 'EXTRACT(quarter from @exp)'
+extract_day_of_year: 'EXTRACT(DOY from @exp)'
+extract_day_of_month: 'EXTRACT(DAY from @exp)'
+extract_day_of_week: 'EXTRACT(DOW from @exp)'
+extract_week_of_year: 'EXTRACT(WEEK from @exp)'
+extract_hour: 'EXTRACT(HOUR from @exp)'
+extract_minute: 'EXTRACT(MINUTE from @exp)'
+extract_year_month: "CAST((EXTRACT(YEAR FROM @exp)::varchar || TO_CHAR(@exp, 'MM')) as INTEGER)"
 
 cast: "@exp::@type"
 
