--- a/lib/dwh/settings/redshift.yml
+++ b/lib/dwh/settings/redshift.yml
@@ -14,12 +14,12 @@ month_name_format: "Month"
 abbreviated_month_name_format: "Mon"
 
 # Date functions patterns
-current_date: "current_date"
-current_time: "current_time"
-current_timestamp: "current_timestamp"
-truncate_date: "date_trunc('@unit', @exp)"
-date_add: "dateadd(@unit, @val, @exp)"
-date_diff: "datediff(@unit, @start_exp, @end_exp)"
+current_date: "CURRENT_DATE"
+current_time: "CURRENT_TIME"
+current_timestamp: "CURRENT_TIMESTAMP"
+truncate_date: "DATE_TRUNC('@unit', @exp)"
+date_add: "DATEADD(@unit, @val, @exp)"
+date_diff: "DATEDIFF(@unit, @start_exp, @end_exp)"
 date_format_sql: "TO_CHAR(@exp, '@format')"
 date_literal: "'@val'"
 date_time_literal: "TIMESTAMP '@val'"
@@ -39,9 +39,9 @@ sunday_week_start_day: "DATEADD(day, -1, DATE_TRUNC(WEEK, DATEADD(DAY, 1, @exp))
 monday_week_start_day: "DATEADD(day, 1, DATE_TRUNC(WEEK, DATEADD(day, -1, @exp)))"
 
 # string functions
-trim: "trim(@exp)"
-lower_case: "lower(@exp)"
-upper_case: "upper(@exp)"
+trim: "TRIM(@exp)"
+lower_case: "LOWER(@exp)"
+upper_case: "UPPER(@exp)"
 
 # null handling
 if_null: "COALESCE(@exp, @when_null)"
