--- a/lib/dwh/settings/redshift.yml
+++ b/lib/dwh/settings/redshift.yml
@@ -1,13 +1,4 @@
-
-# quotes and string lit
-quote: "\"@exp\""
-string_literal: "'@exp'"
-
 # Date Literal Formats
-date_format: "%Y-%m-%d"
-date_time_format: "%Y-%m-%d %H:%M:%S"
-date_time_tz_format: "%Y-%m-%d %H:%M:%S %Z"
-date_type: "string" # alternative is int, integer, dateint
 day_name_format: "Day"
 abbreviated_day_name_format: "Dy"
 month_name_format: "Month" 
@@ -21,8 +12,8 @@ truncate_date: "DATE_TRUNC('@unit', @exp)"
 date_add: "DATEADD(@unit, @val, @exp)"
 date_diff: "DATEDIFF(@unit, @start_exp, @end_exp)"
 date_format_sql: "TO_CHAR(@exp, '@format')"
-date_literal: "'@val'"
-date_time_literal: "TIMESTAMP '@val'"
+date_literal: "'@val'::DATE"
+date_time_literal: "'@val'::TIMESTAMP"
 extract_year: 'EXTRACT(YEAR FROM @exp)'
 extract_month: 'EXTRACT(MONTH FROM @exp)'
 extract_quarter: 'EXTRACT(QUARTER FROM @exp)'
@@ -33,10 +24,10 @@ extract_week_of_year: 'EXTRACT(WEEK FROM @exp)'
 extract_hour: 'EXTRACT(HOUR FROM @exp)'
 extract_minute: 'EXTRACT(MINUTE FROM @exp)'
 extract_year_month: "TO_CHAR(@exp, 'YYYYMM')::INTEGER"
-default_week_start_day: "sunday" # Redshift uses Sunday as default
-week_start_day: "sunday"
-sunday_week_start_day: "DATEADD(day, -1, DATE_TRUNC(WEEK, DATEADD(DAY, 1, @exp)))"
-monday_week_start_day: "DATEADD(day, 1, DATE_TRUNC(WEEK, DATEADD(day, -1, @exp)))"
+default_week_start_day: "monday" # Redshift uses Sunday as default
+week_start_day: "monday"
+sunday_week_start_day: "DATEADD(day, -1, DATE_TRUNC('WEEK', DATEADD(DAY,  1, @exp)))"
+monday_week_start_day: "DATEADD(day,  1, DATE_TRUNC('WEEK', DATEADD(day, -1, @exp)))"
 
 # string functions
 trim: "TRIM(@exp)"
